--- a/login.html
+++ b/login.html
@@ -6,10 +6,11 @@
     <title>Login</title>
     <link rel="stylesheet" href="assets/css/estilo.css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"/>
 </head>
 <body>
     <header class="header">
-        <a href="#" class="logo">Logo</a>
+        <a href="#" class="logo">Cuidadoso</a>
         <input type="checkbox" id="check">
         <label for="check" class="icons">
             <i class="bx bx-menu" id="menu-icon"></i>
@@ -18,10 +19,108 @@
 
         <nav class="navbar">
             <a href="#" style="--i:0">Inicio</a>
-            <a href="#" style="--i:1">Aba 2</a>
-            <a href="#" style="--i:2">Aba 3</a>
+            <a href="#" style="--i:1">Sobre nós</a>
+            <a href="#" style="--i:2">Nossa loja</a>
             <a href="#" style="--i:3">Cadastre-se</a>
         </nav>
     </header>
+
+    <div class="container-log">
+        <div class="form-image">
+            <img src="assets/img/TeamUp-Login.svg">
+        </div>
+        <div class="form">
+            <form action="#">
+                <div class="form-header">
+                    <div class="title">
+                        <h1>Cadastre-se</h1>
+                    </div>
+                    <div class="login-button">
+                        <button><a href="#">Entrar</a></button>
+                    </div>
+                </div>
+
+                <div class="input-group">
+                    <div class="input-box">
+                        <label for="firstname">Nome</label>
+                        <input id="firstname" type="text" name="firstname" placeholder="Digite seu nome" required>
+                    </div>
+                    <div class="input-box">
+                        <label for="CPF">CPF</label>
+                        <input id="CPF" type="text" name="CPF" placeholder="Digite seu CPF" required>
+                    </div>
+                    <div class="input-box">
+                        <label for="RG">RG</label>
+                        <input id="RG" type="text" name="RG" placeholder="Digite seu RG" required>
+                    </div>
+                    <div class="input-box">
+                        <label for="dataNascimento">Data de nascimento</label>
+                        <input id="dataNascimento" type="date" name="firstname" placeholder="Digite sua data de nascimento" required>
+                    </div>
+                    <div class="input-box">
+                        <label for="email">Email</label>
+                        <input id="email" type="email" name="email" placeholder="Digite seu email" required>
+                    </div>
+                    <div class="input-box">
+                        <label for="telefone">Telefone</label>
+                        <input id="telefone" type="text" name="telefone" placeholder="Digite seu telefone" required>
+                    </div>
+                    <div class="input-box">
+                        <label for="senha">Senha</label>
+                        <input id="senha" type="text" name="senha" placeholder="Digite sua senha" required>
+                    </div>
+                </div>
+                
+                <div class="continue-button">
+                    <button><a href="#">Continuar</a></button>
+                </div>
+            </form>
+        </div>
+    </div>
+    
+    <footer class="footer">
+        <div class="container">
+            <div class="row">
+                <div class="footer-col">
+                    <h4>Compania</h4>
+                    <ul>
+                        <li><a href="#">Sobre nós</a></li>
+                        <li><a href="#">Nossos serviços</a></li>
+                        <li><a href="#">Politica de privacidade</a></li>
+                        <li><a href="#">Programa de afiliação</a></li>
+                    </ul>
+                </div>
+                <div class="footer-col">
+                    <h4>Peça ajuda</h4>
+                    <ul>
+                        <li><a href="#">FAQ</a></li>
+                        <li><a href="#">Envios</a></li>
+                        <li><a href="#">Serviços</a></li>
+                        <li><a href="#">Pagamento</a></li>
+                        <li><a href="#">Contatos</a></li>
+                    </ul>
+                </div>
+                <div class="footer-col">
+                    <h4>Shopping Online</h4>
+                    <ul>
+                        <li><a href="#">Roupas</a></li>
+                        <li><a href="#">Produtos</a></li>
+                        <li><a href="#">Informações</a></li>
+                        <li><a href="#">Dúvidas</a></li>
+                    </ul>
+                </div>
+                <div class="footer-col">
+                    <h4>Siga-nos</h4>
+                    <div class="social-links">
+                        <a href="#"><i class="fab fa-facebook-f"></i></a>
+                        <a href="#"><i class="fab fa-twitter"></i></a>
+                        <a href="#"><i class="fab fa-instagram"></i></a>
+                        <a href="#"><i class="fab fa-linkedin-in"></i></a>
+
+                    </div>
+                </div>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
