Aba de loja finalizada

--- a/login.html
+++ b/login.html
@@ -20,8 +20,8 @@
         <nav class="navbar">
             <a href="#" style="--i:0">Inicio</a>
             <a href="#" style="--i:1">Sobre nós</a>
-            <a href="#" style="--i:2">Nossa loja</a>
-            <a href="#" style="--i:3">Cadastre-se</a>
+            <a href="loja.html" style="--i:2">Nossa loja</a>
+            <a href="login.html" style="--i:3">Cadastre-se</a>
         </nav>
     </header>
 
@@ -86,7 +86,6 @@
                     <ul>
                         <li><a href="#">Sobre nós</a></li>
                         <li><a href="#">Nossos serviços</a></li>
-                        <li><a href="#">Politica de privacidade</a></li>
                         <li><a href="#">Programa de afiliação</a></li>
                     </ul>
                 </div>
@@ -96,17 +95,14 @@
                         <li><a href="#">FAQ</a></li>
                         <li><a href="#">Envios</a></li>
                         <li><a href="#">Serviços</a></li>
-                        <li><a href="#">Pagamento</a></li>
-                        <li><a href="#">Contatos</a></li>
                     </ul>
                 </div>
                 <div class="footer-col">
                     <h4>Shopping Online</h4>
                     <ul>
-                        <li><a href="#">Roupas</a></li>
-                        <li><a href="#">Produtos</a></li>
+                        <li><a href="loja.html">Roupas</a></li>
+                        <li><a href="loja.html">Produtos</a></li>
                         <li><a href="#">Informações</a></li>
-                        <li><a href="#">Dúvidas</a></li>
                     </ul>
                 </div>
                 <div class="footer-col">
