--- a/loja.html
+++ b/loja.html
@@ -43,6 +43,14 @@
                 Adicionar ao carrinho
             </button>
         </div>
+        <div class="item">
+            <img src="assets/img/ImgCamisa3.png" alt="">
+            <h2>CAMISA PRETA</h2>
+            <div class="price">$200</div>
+            <button class="addCart">
+                Adicionar ao carrinho
+            </button>
+        </div>
     </div>
     
     <footer class="footer">
