Pag inicial incompleta ainda

--- a/login.html
+++ b/login.html
@@ -18,7 +18,7 @@
         </label>
 
         <nav class="navbar">
-            <a href="#" style="--i:0">Inicio</a>
+            <a href="index.html" style="--i:0">Inicio</a>
             <a href="#" style="--i:1">Sobre nós</a>
             <a href="loja.html" style="--i:2">Nossa loja</a>
             <a href="login.html" style="--i:3">Cadastre-se</a>
@@ -77,46 +77,5 @@
             </form>
         </div>
     </div>
-    
-    <footer class="footer">
-        <div class="container">
-            <div class="row">
-                <div class="footer-col">
-                    <h4>Compania</h4>
-                    <ul>
-                        <li><a href="#">Sobre nós</a></li>
-                        <li><a href="#">Nossos serviços</a></li>
-                        <li><a href="#">Programa de afiliação</a></li>
-                    </ul>
-                </div>
-                <div class="footer-col">
-                    <h4>Peça ajuda</h4>
-                    <ul>
-                        <li><a href="#">FAQ</a></li>
-                        <li><a href="#">Envios</a></li>
-                        <li><a href="#">Serviços</a></li>
-                    </ul>
-                </div>
-                <div class="footer-col">
-                    <h4>Shopping Online</h4>
-                    <ul>
-                        <li><a href="loja.html">Roupas</a></li>
-                        <li><a href="loja.html">Produtos</a></li>
-                        <li><a href="#">Informações</a></li>
-                    </ul>
-                </div>
-                <div class="footer-col">
-                    <h4>Siga-nos</h4>
-                    <div class="social-links">
-                        <a href="#"><i class="fab fa-facebook-f"></i></a>
-                        <a href="#"><i class="fab fa-twitter"></i></a>
-                        <a href="#"><i class="fab fa-instagram"></i></a>
-                        <a href="#"><i class="fab fa-linkedin-in"></i></a>
-
-                    </div>
-                </div>
-            </div>
-        </div>
-    </footer>
 </body>
 </html>
