--- a/loja.html
+++ b/loja.html
@@ -19,10 +19,10 @@
             <i class='bx bx-x-circle' style='color:#ffffff' id="close-icon"></i> 
         </label>
         <nav class="navbar">
-            <a href="#" style="--i:0">Inicio</a>
+            <a href="index.html" style="--i:0">Inicio</a>
             <a href="#" style="--i:1">Sobre nós</a>
-            <a style="--i:3" class="icon-cart">Carrinho</a>
-            <a href="login.html" style="--i:2">Cadastre-se</a>
+            <a style="--i:2" class="icon-cart">Nossa loja</a>
+            <a href="login.html" style="--i:3">Cadastre-se</a>
         </nav>
     </header>
 
@@ -53,46 +53,6 @@
         </div>
     </div>
     
-    <footer class="footer">
-        <div class="container">
-            <div class="row">
-                <div class="footer-col">
-                    <h4>Compania</h4>
-                    <ul>
-                        <li><a href="#">Sobre nós</a></li>
-                        <li><a href="#">Nossos serviços</a></li>
-                        <li><a href="#">Programa de afiliação</a></li>
-                    </ul>
-                </div>
-                <div class="footer-col">
-                    <h4>Peça ajuda</h4>
-                    <ul>
-                        <li><a href="#">FAQ</a></li>
-                        <li><a href="#">Envios</a></li>
-                        <li><a href="#">Serviços</a></li>
-                    </ul>
-                </div>
-                <div class="footer-col">
-                    <h4>Shopping Online</h4>
-                    <ul>
-                        <li><a href="loja.html">Roupas</a></li>
-                        <li><a href="loja.html">Produtos</a></li>
-                        <li><a href="#">Informações</a></li>
-                    </ul>
-                </div>
-                <div class="footer-col">
-                    <h4>Siga-nos</h4>
-                    <div class="social-links">
-                        <a href="#"><i class="fab fa-facebook-f"></i></a>
-                        <a href="#"><i class="fab fa-twitter"></i></a>
-                        <a href="#"><i class="fab fa-instagram"></i></a>
-                        <a href="#"><i class="fab fa-linkedin-in"></i></a>
-
-                    </div>
-                </div>
-            </div>
-        </div>
-    </footer>
 </body>
 <script src="./assets/js/app.js"></script>
 </html>
